# docs/swagger/swagger.json
@@ -432,13 +432,13 @@
                 "license": {
                     "type": "string"
                 },
+                "openSource": {
+                    "type": "boolean"
+                },
                 "origin": {
                     "type": "string"
                 },
-                "originPath": {
-                    "type": "string"
-                },
-                "originRef": {
+                "toolchain": {
                     "type": "string"
                 },
                 "verifiedBy": {
